--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,11 @@
     <link href="https://fonts.googleapis.com/css?family=Muli:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Rajdhani:300,400,500,600,700' rel="stylesheet">
     <link rel="stylesheet" href="https://use.typekit.net/fwu6xne.css">
-    <link rel="icon" type="image/png" href="./media/images/favicon.png"/>
+    <link rel="icon" type="image/png" href="/media/images/favicon.png"/>
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 </head>
 <body>
     <div id="app"></div>
-    <script src="./bundle.js"></script>
+    <script src="/bundle.js"></script>
 </body>
 </html>
