--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://use.typekit.net/fwu6xne.css">
     <link rel="icon" type="image/png" href="/media/images/favicon.png"/>
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+    <script src="https://unpkg.com/eva-icons"></script>
 </head>
 <body>
     <div id="app"></div>
