Fixed lens problems, updated icons for device cards

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,10 @@
     <link href='https://fonts.googleapis.com/css?family=Rajdhani:300,400,500,600,700' rel="stylesheet">
     <link rel="stylesheet" href="https://use.typekit.net/fwu6xne.css">
     <link rel="icon" type="image/png" href="/media/images/favicon.png"/>
-    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+    <script defer
+            src="https://use.fontawesome.com/releases/v5.5.0/js/all.js"
+            integrity="sha384-GqVMZRt5Gn7tB9D9q7ONtcp4gtHIUEW/yG7h98J7IpE3kpi+srfFyyB/04OV6pG0"
+            crossorigin="anonymous"></script>
     <script src="https://unpkg.com/eva-icons"></script>
 </head>
 <body>
